what's on - tab 작업

--- a/culture.html
+++ b/culture.html
@@ -133,115 +133,121 @@
         <section class="section__cnt">
           <div class="lst-tab__cnt lst-tab__calendar">
             <div class="section__monthly-lst">
-              <article class="monthly-lst__now">
+              <article class="monthly-lst__now none">
                 <h3 class="section__sub-title">Now</h3>
                 <div class="section__cnt-wrap">
                   <p class="no-program">
-                    선택하신 날짜에는 프로그램이 없습니다.
+                    <span>선택하신 날짜에는 프로그램이 없습니다.</span>
                   </p>
-                  <a href="#" class="section__activity">
-                    <div class="section__activity-info">
-                      <p class="section__activity-period">07/16(목)</p>
-                      <strong class="section__activity-title">위스키 끝파왕, 버번을 만나다</strong>
-                      <p class="section__activity-desc">
-                        버번 위스키 테이스팅 클래스
-                      </p>
-                      <p class="section__activity-space">
-                        쿠킹 라이브러리<span class="section__activity-reservation">예약</span>
-                      </p>
-                    </div>
-                    <div class="section__activity-img">
-                      <img src="images/main/activity8.jpg" alt="" />
-                      <span class="section__activity-location">청담</span>
-                    </div>
-                  </a>
-                  <a href="#" class="section__activity">
-                    <div class="section__activity-info">
-                      <p class="section__activity-period">
-                        07/15(수) ~ 07/21(화)
-                      </p>
-                      <strong class="section__activity-title">듀스 한정판 LP 리마스터링 버전</strong>
-                      <p class="section__activity-desc">Limited Vinyl Club</p>
-                      <p class="section__activity-space">
-                        바이닐앤플라스틱<span class="section__activity-reservation">예약</span>
-                      </p>
-                    </div>
-                    <div class="section__activity-img">
-                      <img src="images/main/activity7.jpg" alt="" />
-                      <span class="section__activity-location">이태원</span>
-                    </div>
-                  </a>
-                  <a href="#" class="section__activity">
-                    <div class="section__activity-info">
-                      <p class="section__activity-period">
-                        07/15(수) ~ 10/11(일)
-                      </p>
-                      <strong class="section__activity-title">Lucky DIVE 오스제미오스 인증샷!</strong>
-                      <p class="section__activity-desc">
-                        전시 인증샷 보여주고 선물 뽑자!
-                      </p>
-                      <p class="section__activity-space">스토리지</p>
-                    </div>
-                    <div class="section__activity-img">
-                      <img src="images/main/activity6.jpg" alt="" />
-                      <span class="section__activity-location">이태원</span>
-                    </div>
-                  </a>
-                  <a href="#" class="section__activity">
-                    <div class="section__activity-info">
-                      <p class="section__activity-period">
-                        07/15(수) ~ 10/11(일)
-                      </p>
-                      <strong class="section__activity-title">초현실적 환상 세계로의 초대</strong>
-                      <p class="section__activity-desc">
-                        오스제미오스 국내 최초 개인전 오픈!
-                      </p>
-                      <p class="section__activity-space">
-                        스토리지<span class="section__activity-reservation">예약</span>
-                      </p>
-                    </div>
-                    <div class="section__activity-img">
-                      <img src="images/main/activity5.jpg" alt="" />
-                      <span class="section__activity-location">이태원</span>
-                    </div>
-                  </a>
+                  <div class="lst-program">
+                    <a href="#" class="section__activity">
+                      <div class="section__activity-info">
+                        <p class="section__activity-period">09/01(화) ~ 09/27(일)</p>
+                        <strong class="section__activity-title">기다리던 빈티지 가구 전시</strong>
+                        <p class="section__activity-desc">
+                          디자인 라이브러리 X 원오디너리맨션
+                        </p>
+                        <p class="section__activity-space">
+                          디자인 라이브러리
+                        </p>
+                      </div>
+                      <div class="section__activity-img">
+                        <img src="images/main/activity1.jpg" alt="" />
+                        <span class="section__activity-location">가회</span>
+                      </div>
+                    </a>
+                    <a href="#" class="section__activity">
+                      <div class="section__activity-info">
+                        <p class="section__activity-period">
+                          09/01(화) ~ 11/01(일)
+                        </p>
+                        <strong class="section__activity-title">매혹적인 향기 가득</strong>
+                        <p class="section__activity-desc">Food Theme 10. Curry</p>
+                        <p class="section__activity-space">
+                          쿠킹 라이브러리
+                        </p>
+                      </div>
+                      <div class="section__activity-img">
+                        <img src="images/main/activity2.jpg" alt="" />
+                        <span class="section__activity-location">청담</span>
+                      </div>
+                    </a>
+                    <a href="#" class="section__activity">
+                      <div class="section__activity-info">
+                        <p class="section__activity-period">
+                          07/15(수) ~ 10/11(일)
+                        </p>
+                        <strong class="section__activity-title">초현실적 환상 세계로의 초대</strong>
+                        <p class="section__activity-desc">
+                          오스제미오스 국내 최초 개인전 오픈!
+                        </p>
+                        <p class="section__activity-space">
+                          스토리지<span class="section__activity-reservation">예약</span>
+                        </p>
+                      </div>
+                      <div class="section__activity-img">
+                        <img src="images/main/activity3.jpg" alt="" />
+                        <span class="section__activity-location">이태원</span>
+                      </div>
+                    </a>
+                    <a href="#" class="section__activity">
+                      <div class="section__activity-info">
+                        <p class="section__activity-period">
+                          07/15(수) ~ 10/11(일)
+                        </p>
+                        <strong class="section__activity-title">Lucky DIVE 오스제미오스 인증샷!</strong>
+                        <p class="section__activity-desc">
+                          전시 인증샷 보여주고 선물 뽑자!
+                        </p>
+                        <p class="section__activity-space">스토리지</p>
+                      </div>
+                      <div class="section__activity-img">
+                        <img src="images/main/activity4.jpg" alt="" />
+                        <span class="section__activity-location">이태원</span>
+                      </div>
+                    </a>
+                  </div>
                 </div>
               </article>
-              <article class="monthly-lst__upcoming">
+              <article class="monthly-lst__upcoming none">
                 <h3 class="section__sub-title">Upcoming</h3>
-                <div class="section__cnt-wrap"></div>
+                <div class="section__cnt-wrap">
+                  <p class="no-program">
+                    <span>풍덩! 빠질만한 다음 행사를 준비 중입니다 :)</span>
+                  </p>
+                </div>
               </article>
               <article class="monthly-lst__past">
                 <h3 class="section__sub-title">Past</h3>
                 <div class="section__cnt-wrap">
                   <a href="#" class="section__activity">
                     <div class="section__activity-info">
-                      <p class="section__activity-period">07/08(수)</p>
-                      <strong class="section__activity-title">여름밤 스위스 여행</strong>
+                      <p class="section__activity-period">08/27(목) ~ 09/01(화)</p>
+                      <strong class="section__activity-title">이센스 한정판 바이닐 온라인 줄서기</strong>
                       <p class="section__activity-desc">
-                        스위스 전문 가이드 서찬수의 트래블 토크
+                        Limited Vinyl Club
                       </p>
                       <p class="section__activity-space">
-                        트래블 라이브러리<span class="section__activity-reservation">예약</span>
+                        바이닐앤플라스틱
                       </p>
                     </div>
                     <div class="section__activity-img">
                       <img src="images/main/activity4.jpg" alt="" />
-                      <span class="section__activity-location">청담</span>
+                      <span class="section__activity-location">이태원</span>
                     </div>
                   </a>
                   <a href="#" class="section__activity">
                     <div class="section__activity-info">
-                      <p class="section__activity-period">07/04(토)</p>
-                      <strong class="section__activity-title">시장 가는 즐거움</strong>
+                      <p class="section__activity-period">08/08(토) ~ 08/30(일)</p>
+                      <strong class="section__activity-title">피플사진관에서 만나</strong>
                       <p class="section__activity-desc">
-                        쿠킹 라이브러리 X 마르쉐 파머스 마켓
+                        피플사진관을 엽니다
                       </p>
-                      <p class="section__activity-space">쿠킹 라이브러리</p>
+                      <p class="section__activity-space">바이닐앤플라스틱</p>
                     </div>
                     <div class="section__activity-img">
                       <img src="images/main/activity3.jpg" alt="" />
-                      <span class="section__activity-location">청담</span>
+                      <span class="section__activity-location">이태원</span>
                     </div>
                   </a>
                 </div>
@@ -269,7 +275,7 @@
               <div class="section__cnt-wrap">
                 <a href="#" class="section__activity">
                   <div class="section__activity-info">
-                    <img src="images/main/activity7.jpg" alt="" />
+                    <img src="images/main/activity1.jpg" alt="" />
                     <p class="section__activity-period">
                       07/15(수) ~ 07/21(화)
                     </p>
@@ -282,7 +288,7 @@
                 </a>
                 <a href="#" class="section__activity">
                   <div class="section__activity-info">
-                    <img src="images/main/activity6.jpg" alt="" />
+                    <img src="images/main/activity2.jpg" alt="" />
                     <p class="section__activity-period">
                       07/15(수) ~ 10/11(일)
                     </p>
@@ -292,87 +298,6 @@
                     </p>
                     <p class="section__activity-space">
                       스토리지
-                    </p>
-                  </div>
-                </a>
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <img src="images/main/activity5.jpg" alt="" />
-                    <p class="section__activity-period">
-                      07/15(수) ~ 10/11(일)
-                    </p>
-                    <strong class="section__activity-title">초현실적 환상 세계로의 초대</strong>
-                    <p class="section__activity-desc">
-                      오스제미오스 국내 최초 개인전 오픈
-                    </p>
-                    <p class="section__activity-space">
-                      스토리지<span class="section__activity-reservation">예약</span>
-                    </p>
-                  </div>
-                </a>
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <img src="images/main/activity7.jpg" alt="" />
-                    <p class="section__activity-period">
-                      07/15(수) ~ 07/21(화)
-                    </p>
-                    <strong class="section__activity-title">듀스 한정판 LP 리마스터링 버전</strong>
-                    <p class="section__activity-desc">Limited Vinyl Club</p>
-                    <p class="section__activity-space">
-                      바이닐앤플라스틱<span class="section__activity-reservation">예약</span>
-                    </p>
-                  </div>
-                </a>
-              </div>
-              <button type="button" class="btn-more-activity">
-                더 보기<i class="fas fa-plus"></i>
-              </button>
-            </article>
-            <article class="section__place">
-              <h3 class="section__sub-title">청담</h3>
-              <div class="section__cnt-wrap">
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <img src="images/main/activity9.jpg" alt="" />
-                    <p class="section__activity-period">
-                      07/24(금)
-                    </p>
-                    <strong class="section__activity-title">낯선 곳에 나를 잠시 묶어둔 여름</strong>
-                    <p class="section__activity-desc">
-                      여름밤, 이병률 작가의 시 낭독회
-                    </p>
-                    <p class="section__activity-space">
-                      트래블 라이브러리<span class="section__activity-reservation">예약</span>
-                    </p>
-                  </div>
-                </a>
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <img src="images/main/activity8.jpg" alt="" />
-                    <p class="section__activity-period">
-                      07/16(목)
-                    </p>
-                    <strong class="section__activity-title">위스키 끝판왕, 버번을 만나다</strong>
-                    <p class="section__activity-desc">
-                      버번 위스키 테이스팅 클래스
-                    </p>
-                    <p class="section__activity-space">
-                      쿠킹 라이브러리<span class="section__activity-reservation">예약</span>
-                    </p>
-                  </div>
-                </a>
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <img src="images/main/activity4.jpg" alt="" />
-                    <p class="section__activity-period">
-                      07/08(수)
-                    </p>
-                    <strong class="section__activity-title">여름밤 스위스 여행</strong>
-                    <p class="section__activity-desc">
-                      스위스 전문 가이드 서찬수의 트래블 토크
-                    </p>
-                    <p class="section__activity-space">
-                      트래블 라이브러리<span class="section__activity-reservation">예약</span>
                     </p>
                   </div>
                 </a>
@@ -380,57 +305,6 @@
                   <div class="section__activity-info">
                     <img src="images/main/activity3.jpg" alt="" />
                     <p class="section__activity-period">
-                      07/04(토)
-                    </p>
-                    <strong class="section__activity-title">시장 가는 즐거움</strong>
-                    <p class="section__activity-desc">
-                      쿠킹 라이브러리 X 마르쉐 파머스 마켓
-                    </p>
-                    <p class="section__activity-space">
-                      쿠킹 라이브러리
-                    </p>
-                  </div>
-                </a>
-              </div>
-              <button type="button" class="btn-more-activity">
-                더 보기<i class="fas fa-plus"></i>
-              </button>
-            </article>
-            <article class="section__place">
-              <h3 class="section__sub-title">가회</h3>
-              <div class="section__cnt-wrap">
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <img src="images/main/activity7.jpg" alt="" />
-                    <p class="section__activity-period">
-                      07/15(수) ~ 07/21(화)
-                    </p>
-                    <strong class="section__activity-title">듀스 한정판 LP 리마스터링 버전</strong>
-                    <p class="section__activity-desc">Limited Vinyl Club</p>
-                    <p class="section__activity-space">
-                      바이닐앤플라스틱<span class="section__activity-reservation">예약</span>
-                    </p>
-                  </div>
-                </a>
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <img src="images/main/activity6.jpg" alt="" />
-                    <p class="section__activity-period">
-                      07/15(수) ~ 10/11(일)
-                    </p>
-                    <strong class="section__activity-title">Lucky DIVE 오스제미오스 인증샷!</strong>
-                    <p class="section__activity-desc">
-                      전시 인증샷 보여주고 선물뽑자!
-                    </p>
-                    <p class="section__activity-space">
-                      스토리지
-                    </p>
-                  </div>
-                </a>
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <img src="images/main/activity5.jpg" alt="" />
-                    <p class="section__activity-period">
                       07/15(수) ~ 10/11(일)
                     </p>
                     <strong class="section__activity-title">초현실적 환상 세계로의 초대</strong>
@@ -444,7 +318,7 @@
                 </a>
                 <a href="#" class="section__activity">
                   <div class="section__activity-info">
-                    <img src="images/main/activity7.jpg" alt="" />
+                    <img src="images/main/activity4.jpg" alt="" />
                     <p class="section__activity-period">
                       07/15(수) ~ 07/21(화)
                     </p>
@@ -460,6 +334,7 @@
                 더 보기<i class="fas fa-plus"></i>
               </button>
             </article>
+
           </div>
         </section>
       </div>
@@ -527,7 +402,7 @@
     </div>
   </div>
 
-  <!-- <script src="js/culture.js"></script> -->
+  <script src="js/culture.js"></script>
   <script src="js/search.js"></script>
 </body>
 
