what's on 지역tab 수정

--- a/culture.html
+++ b/culture.html
@@ -133,7 +133,7 @@
         <section class="section__cnt">
           <div class="lst-tab__cnt lst-tab__calendar">
             <div class="section__monthly-lst">
-              <article class="monthly-lst__now none">
+              <article class="monthly-lst__now">
                 <h3 class="section__sub-title">Now</h3>
                 <div class="section__cnt-wrap">
                   <p class="no-program">
@@ -232,7 +232,7 @@
                       </p>
                     </div>
                     <div class="section__activity-img">
-                      <img src="images/main/activity4.jpg" alt="" />
+                      <img src="images/main/activity5.jpg" alt="" />
                       <span class="section__activity-location">이태원</span>
                     </div>
                   </a>
@@ -246,7 +246,7 @@
                       <p class="section__activity-space">바이닐앤플라스틱</p>
                     </div>
                     <div class="section__activity-img">
-                      <img src="images/main/activity3.jpg" alt="" />
+                      <img src="images/main/activity6.jpg" alt="" />
                       <span class="section__activity-location">이태원</span>
                     </div>
                   </a>
@@ -275,57 +275,57 @@
               <div class="section__cnt-wrap">
                 <a href="#" class="section__activity">
                   <div class="section__activity-info">
-                    <img src="images/main/activity1.jpg" alt="" />
+                    <img src="images/main/activity7.jpg" alt="" />
                     <p class="section__activity-period">
-                      07/15(수) ~ 07/21(화)
+                      09/10(목) ~ 09/30(수)
                     </p>
-                    <strong class="section__activity-title">듀스 한정판 LP 리마스터링 버전</strong>
+                    <strong class="section__activity-title">예쁘니까 인정</strong>
+                    <p class="section__activity-desc">L유니버설뮤직의 한정판 컬러 바이닐</p>
+                    <p class="section__activity-space">
+                      바이닐앤플라스틱
+                    </p>
+                  </div>
+                </a>
+                <a href="#" class="section__activity">
+                  <div class="section__activity-info">
+                    <img src="images/main/activity8.jpg" alt="" />
+                    <p class="section__activity-period">
+                      09/01(화) ~ 09/30(수)
+                    </p>
+                    <strong class="section__activity-title">감각의 해방을 꿈꾸다,<br>사이키델릭</strong>
+                    <p class="section__activity-desc">
+                      뮤직 라이브러리 9월의 컬렉션
+                    </p>
+                    <p class="section__activity-space">
+                      뮤직 라이브러리
+                    </p>
+                  </div>
+                </a>
+                <a href="#" class="section__activity">
+                  <div class="section__activity-info">
+                    <img src="images/main/activity9.jpg" alt="" />
+                    <p class="section__activity-period">
+                      09/01(화) ~ 09/30(수)
+                    </p>
+                    <strong class="section__activity-title">가을날의 소울을 좋아하세요?</strong>
+                    <p class="section__activity-desc">
+                      VnP 9월의 먼슬리 스페셜
+                    </p>
+                    <p class="section__activity-space">
+                      바이닐앤플라스틱
+                    </p>
+                  </div>
+                </a>
+                <a href="#" class="section__activity">
+                  <div class="section__activity-info">
+                    <img src="images/main/activity5.jpg" alt="" />
+                    <p class="section__activity-period">
+                      08/27(목) ~ 09/01(화)
+                    </p>
+                    <strong class="section__activity-title">이센스 한정판 바이닐 온라인 줄서기</strong>
                     <p class="section__activity-desc">Limited Vinyl Club</p>
                     <p class="section__activity-space">
-                      바이닐앤플라스틱<span class="section__activity-reservation">예약</span>
-                    </p>
-                  </div>
-                </a>
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <img src="images/main/activity2.jpg" alt="" />
-                    <p class="section__activity-period">
-                      07/15(수) ~ 10/11(일)
-                    </p>
-                    <strong class="section__activity-title">Lucky DIVE 오스제미오스 인증샷!</strong>
-                    <p class="section__activity-desc">
-                      전시 인증샷 보여주고 선물뽑자!
-                    </p>
-                    <p class="section__activity-space">
-                      스토리지
-                    </p>
-                  </div>
-                </a>
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <img src="images/main/activity3.jpg" alt="" />
-                    <p class="section__activity-period">
-                      07/15(수) ~ 10/11(일)
-                    </p>
-                    <strong class="section__activity-title">초현실적 환상 세계로의 초대</strong>
-                    <p class="section__activity-desc">
-                      오스제미오스 국내 최초 개인전 오픈
-                    </p>
-                    <p class="section__activity-space">
-                      스토리지<span class="section__activity-reservation">예약</span>
-                    </p>
-                  </div>
-                </a>
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <img src="images/main/activity4.jpg" alt="" />
-                    <p class="section__activity-period">
-                      07/15(수) ~ 07/21(화)
-                    </p>
-                    <strong class="section__activity-title">듀스 한정판 LP 리마스터링 버전</strong>
-                    <p class="section__activity-desc">Limited Vinyl Club</p>
-                    <p class="section__activity-space">
-                      바이닐앤플라스틱<span class="section__activity-reservation">예약</span>
+                      바이닐앤플라스틱
                     </p>
                   </div>
                 </a>
