--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 </a>
                 <a href="#" class="section__activity">
                   <div class="section__activity-info">
-                    <p class="section__activity-period">09/01(화) ~ 09/30(수)</p>
+                    <p class="section__activity-period">09/01(화) ~ 11/01(일)</p>
                     <strong class="section__activity-title">매혹적인<br>향기 가득</strong>
                     <p class="section__activity-desc">
                       Food Theme 10. Curry
