스크롤 시 header 색상 변경 적용

--- a/design-library.html
+++ b/design-library.html
@@ -19,8 +19,8 @@
       <div class="header__nav">
         <h1 class="header__logo">
           <a href="index.html" class="header__logo-link header--scroll">
-            <img src="images/common/logo-dive-w.svg" class="scroll--show" alt="" />
-            <img src="images/common/logo-dive-b.svg" alt="" />
+            <img src="images/common/logo-dive-w.svg" class="scroll--hide" alt="현대카드 다이브" />
+            <img src="images/common/logo-dive-b.svg" class="scroll--show" alt="현대카드 다이브" />
           </a>
         </h1>
         <nav id="gnb">
@@ -33,8 +33,8 @@
             <li class="lst-gnb__item">
               <a href="#" class="lst-gnb__item-link header--scroll">
                 <span class="lst-gnb__item-txt">Space</span>
-                <img src="images/common/ico-arr-w.svg" alt="서브메뉴보기" class="icon-arrow scroll--show" />
-                <img src="images/common/ico-arr-b.svg" alt="서브메뉴보기" class="icon-arrow" />
+                <img src="images/common/ico-arr-w.svg" alt="서브메뉴보기" class="icon-arrow scroll--hide" />
+                <img src="images/common/ico-arr-b.svg" alt="서브메뉴보기" class="icon-arrow scroll--show" />
               </a>
               <ul class="lst-gnb-sub">
                 <li class="lst-gnb-sub__item">
@@ -77,8 +77,8 @@
             <li class="lst-gnb__item">
               <a href="#" class="lst-gnb__item-link header--scroll">
                 <span class="lst-gnb__item-txt">Culture</span>
-                <img src="images/common/ico-arr-w.svg" alt="서브메뉴보기" class="icon-arrow scroll--show" />
-                <img src="images/common/ico-arr-b.svg" alt="서브메뉴보기" class="icon-arrow" />
+                <img src="images/common/ico-arr-w.svg" alt="서브메뉴보기" class="icon-arrow scroll--hide" />
+                <img src="images/common/ico-arr-b.svg" alt="서브메뉴보기" class="icon-arrow scroll--show" />
               </a>
               <ul class="lst-gnb-sub">
                 <li class="lst-gnb-sub__item">
@@ -107,8 +107,8 @@
         </nav>
       </div>
       <a href="#" class="btn__search header--scroll">
-        <img src="images/common/ico-search-w.png" class="scroll--show" alt="검색" />
-        <img src="images/common/ico-search-b.svg" alt="검색" />
+        <img src="images/common/ico-search-w.png" class="scroll--hide" alt="검색" />
+        <img src="images/common/ico-search-b.svg" class="scroll--show" alt="검색" />
       </a>
     </header>
 
@@ -397,6 +397,7 @@
     </div>
   </div>
 
+  <script src="js/space.js"></script>
   <script src="js/search.js"></script>
 </body>
 
