main 반응형작업

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <div class="section__top-box">
                 <a href="#" class="btn-more">
                   <img src="images/common/ico-arr-title.png" alt="바로가기" />
-                  <p>전체<br />보기</p>
+                  <p><span>전체</span>보기</p>
                 </a>
               </div>
             </div>
