header mobile화면 nav 버튼처리

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 				<h1 class="header__logo">
 					<a href="index.html" class="header__logo-link"><img src="images/common/logo-dive-b.svg" alt="" /></a>
 				</h1>
+
 				<nav id="gnb">
+					<button type="buton" class="btn-nav">
+						<span></span>
+						<span></span>
+						<span></span>
+					</button>
 					<ul class="lst-gnb">
 						<li class="lst-gnb__item">
 							<a href="culture.html" class="lst-gnb__item-link">
