mobile 메뉴(nav) 작업

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<a href="index.html" class="header__logo-link"><img src="images/common/logo-dive-b.svg" alt="" /></a>
 				</h1>
 
-				<nav id="gnb">
+				<nav id="gnb" class="nav">
 					<button type="buton" class="btn-nav">
 						<span></span>
 						<span></span>
@@ -496,10 +496,96 @@
 				<span class="blind">검색창닫기</span>
 			</button>
 		</div>
+		<div class="nav nav-mobile">
+			<ul class="lst-gnb">
+				<li class="lst-gnb__item">
+					<a href="culture.html" class="lst-gnb__item-link">
+						<span class="lst-gnb__item-txt">What's on</span>
+					</a>
+				</li>
+				<li class="lst-gnb__item">
+					<a href="#" class="lst-gnb__item-link">
+						<span class="lst-gnb__item-txt">Space</span>
+						<img src="images/common/ico-arr-w.svg" alt="서브메뉴보기" class="icon-arrow" />
+					</a>
+					<ul class="lst-gnb-sub">
+						<li class="lst-gnb-sub__item">
+							<a href="design-library.html" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">DESIGN LIBRARY</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">TRAVEL LIBRARY</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">MUSIC LIBRARY</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">COOKING LIBRARY</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">UNDERSTAGE</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">VINYL & PLASTIC</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">STORAGE</span>
+							</a>
+						</li>
+					</ul>
+				</li>
+				<li class="lst-gnb__item">
+					<a href="#" class="lst-gnb__item-link">
+						<span class="lst-gnb__item-txt">Culture</span>
+						<img src="images/common/ico-arr-b.svg" alt="서브메뉴보기" class="icon-arrow" />
+					</a>
+					<ul class="lst-gnb-sub">
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">SUPER CONCERT</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">DAVINCI MOTEL</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">CURTURE PROJECT</span>
+							</a>
+						</li>
+					</ul>
+				</li>
+				<li class="lst-gnb__item">
+					<a href="#" class="lst-gnb__item-link">
+						<span class="lst-gnb__item-txt">Post</span>
+					</a>
+				</li>
+			</ul>
+			<button type="button" class="btn__close">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="blind">메뉴닫기</span>
+			</button>
+		</div>
 	</div>
 
 	<script src="js/main.js"></script>
 	<script src="js/search.js"></script>
+	<script src="js/nav.js"></script>
 </body>
 
 </html>
