mobile화면 메뉴(nav) 수정

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 				<li class="lst-gnb__item">
 					<a href="#" class="lst-gnb__item-link">
 						<span class="lst-gnb__item-txt">Culture</span>
-						<img src="images/common/ico-arr-b.svg" alt="서브메뉴보기" class="icon-arrow" />
+						<img src="images/common/ico-arr-w.svg" alt="서브메뉴보기" class="icon-arrow" />
 					</a>
 					<ul class="lst-gnb-sub">
 						<li class="lst-gnb-sub__item">
