what's on 반응형 작업

--- a/culture.html
+++ b/culture.html
@@ -15,12 +15,17 @@
 
 <body id="culture">
   <div id="wrap" class="whats-on__wrapper">
-    <header id="header">
+    <header id="header" class="nav">
       <div class="header__nav">
         <h1 class="header__logo">
           <a href="index.html" class="header__logo-link"><img src="images/common/logo-dive-b.svg" alt="" /></a>
         </h1>
         <nav id="gnb">
+					<button type="buton" class="btn-nav">
+						<span></span>
+						<span></span>
+						<span></span>
+					</button>
           <ul class="lst-gnb">
             <li class="lst-gnb__item">
               <a href="culture.html" class="lst-gnb__item-link">
@@ -338,7 +343,8 @@
           </div>
         </section>
       </div>
-    </div>
+		</div>
+		
     <footer id="footer">
       <img src="images/common/logo-hdcard.svg" alt="현대카드" class="footer__logo" />
       <div class="footer__info">
@@ -388,7 +394,7 @@
               <p>나만의 #혼플레이</p>
             </li>
             <li class="search__event-item">
-              <img src="images/common/search-event1.jpg" alt="">
+              <img src="images/common/search-event2.jpg" alt="">
               <p>필카 vs 폰카</p>
             </li>
           </ul>
@@ -399,11 +405,97 @@
         <span class="bar"></span>
         <span class="blind">검색창닫기</span>
       </button>
-    </div>
+		</div>
+		<div class="nav nav-mobile">
+			<ul class="lst-gnb">
+				<li class="lst-gnb__item">
+					<a href="culture.html" class="lst-gnb__item-link">
+						<span class="lst-gnb__item-txt">What's on</span>
+					</a>
+				</li>
+				<li class="lst-gnb__item">
+					<a href="#" class="lst-gnb__item-link">
+						<span class="lst-gnb__item-txt">Space</span>
+						<img src="images/common/ico-arr-w.svg" alt="서브메뉴보기" class="icon-arrow" />
+					</a>
+					<ul class="lst-gnb-sub">
+						<li class="lst-gnb-sub__item">
+							<a href="design-library.html" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">DESIGN LIBRARY</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">TRAVEL LIBRARY</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">MUSIC LIBRARY</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">COOKING LIBRARY</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">UNDERSTAGE</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">VINYL & PLASTIC</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">STORAGE</span>
+							</a>
+						</li>
+					</ul>
+				</li>
+				<li class="lst-gnb__item">
+					<a href="#" class="lst-gnb__item-link">
+						<span class="lst-gnb__item-txt">Culture</span>
+						<img src="images/common/ico-arr-w.svg" alt="서브메뉴보기" class="icon-arrow" />
+					</a>
+					<ul class="lst-gnb-sub">
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">SUPER CONCERT</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">DAVINCI MOTEL</span>
+							</a>
+						</li>
+						<li class="lst-gnb-sub__item">
+							<a href="#" class="lst-gnb-sub__item-link">
+								<span class="lst-gnb-sub__item-txt">CURTURE PROJECT</span>
+							</a>
+						</li>
+					</ul>
+				</li>
+				<li class="lst-gnb__item">
+					<a href="#" class="lst-gnb__item-link">
+						<span class="lst-gnb__item-txt">Post</span>
+					</a>
+				</li>
+			</ul>
+			<button type="button" class="btn__close">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="blind">메뉴닫기</span>
+			</button>
+		</div>
   </div>
 
   <script src="js/culture.js"></script>
-  <script src="js/search.js"></script>
+	<script src="js/search.js"></script>
+	<script src="js/nav.js"></script>
 </body>
 
 </html>
