--- a/design-library.html
+++ b/design-library.html
@@ -6,16 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="shortcut icon" href="images/common/favicon.ico">
 	<script src="https://kit.fontawesome.com/642e975ea7.js" crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script src="js/script.js"></script>
 	<link rel="stylesheet" href="css/style.css" />
 	<title>Design Library | 현대카드 DIVE</title>
 </head>
 
 <body>
 	<div id="wrap" class="space__wrapper">
-		<header id="header">
+		<header id="header" class="nav">
 			<div class="header__nav">
 				<h1 class="header__logo">
 					<a href="index.html" class="header__logo-link header--scroll">
@@ -23,7 +20,7 @@
 						<img src="images/common/logo-dive-b.svg" class="scroll--show" alt="현대카드 다이브" />
 					</a>
 				</h1>
-				<nav id="gnb" class="nav">
+				<nav id="gnb">
 					<button type="buton" class="btn-nav">
 						<span></span>
 						<span></span>
@@ -152,40 +149,18 @@
 						<article class="lst__activity">
 							<div class="lst__activity-period">
 								<a href="#" class="lst__activity-period-link">
-									<p class="lst__activity-week">Wed</p>
-									<p class="lst__activity-date">07.29</p>
+									<p class="lst__activity-week">Wed Wed</p>
+									<p class="lst__activity-date">09.09 ~ 09.30</p>
 								</a>
 							</div>
 							<div class="lst__activity-event">
 								<a href="#" class="lst__activity-event-link">
 									<div class="lst__activity-img">
-										<img src="images/space/event5.jpg" alt="" />
+										<img src="images/space/event1.jpg" alt="" />
 									</div>
-									<strong class="lst__activity-title">올 여름 책으로 떠나는<br />가구 디자인 여행</strong>
+									<strong class="lst__activity-title">의자는 건축이다</strong>
 									<p class="lst__activity-desc">
-										디자인 라이브러리 '북살롱'
-									</p>
-									<p class="lst__activity-space">
-										디자인 라이브러리<span class="lst__activity-reservation">예약</span>
-									</p>
-								</a>
-							</div>
-						</article>
-						<article class="lst__activity">
-							<div class="lst__activity-period">
-								<a href="#" class="lst__activity-period-link">
-									<p class="lst__activity-week">Thu Sun</p>
-									<p class="lst__activity-date">07.16 ~ 08.16</p>
-								</a>
-							</div>
-							<div class="lst__activity-event">
-								<a href="#" class="lst__activity-event-link">
-									<div class="lst__activity-img">
-										<img src="images/space/event4.jpg" alt="" />
-									</div>
-									<strong class="lst__activity-title">#애정가구챌린지</strong>
-									<p class="lst__activity-desc">
-										애정하는 나의 가구 자랑하기
+										9월의 레어 북 컬렉션
 									</p>
 									<p class="lst__activity-space">
 										디자인 라이브러리
@@ -197,17 +172,17 @@
 							<div class="lst__activity-period">
 								<a href="#" class="lst__activity-period-link">
 									<p class="lst__activity-week">Tue Sun</p>
-									<p class="lst__activity-date">07.07 ~ 08.30</p>
+									<p class="lst__activity-date">09.01 ~ 09.27</p>
 								</a>
 							</div>
 							<div class="lst__activity-event">
 								<a href="#" class="lst__activity-event-link">
 									<div class="lst__activity-img">
-										<img src="images/space/event3.jpg" alt="" />
+										<img src="images/space/event4.jpg" alt="" />
 									</div>
-									<strong class="lst__activity-title">어디에도 없던 가구와<br />책의 만남</strong>
+									<strong class="lst__activity-title">기다리던 빈티지 가구 전시</strong>
 									<p class="lst__activity-desc">
-										디자인 라이브러리 X 더콘란샵
+										디자인 라이브러리 X 원오디너리맨션
 									</p>
 									<p class="lst__activity-space">
 										디자인 라이브러리
@@ -218,8 +193,30 @@
 						<article class="lst__activity">
 							<div class="lst__activity-period">
 								<a href="#" class="lst__activity-period-link">
-									<p class="lst__activity-week">Wed Fri</p>
-									<p class="lst__activity-date">07.01 ~ 07.31</p>
+									<p class="lst__activity-week">Tue Sun</p>
+									<p class="lst__activity-date">09.01 ~ 09.30</p>
+								</a>
+							</div>
+							<div class="lst__activity-event">
+								<a href="#" class="lst__activity-event-link">
+									<div class="lst__activity-img">
+										<img src="images/space/event3.jpg" alt="" />
+									</div>
+									<strong class="lst__activity-title">디자인을 주도하다</strong>
+									<p class="lst__activity-desc">
+										디자인 라이브러리 9월의 새 책
+									</p>
+									<p class="lst__activity-space">
+										디자인 라이브러리
+									</p>
+								</a>
+							</div>
+						</article>
+						<article class="lst__activity">
+							<div class="lst__activity-period">
+								<a href="#" class="lst__activity-period-link">
+									<p class="lst__activity-week">Sat Mon</p>
+									<p class="lst__activity-date">08.01 ~ 08.31</p>
 								</a>
 							</div>
 							<div class="lst__activity-event">
@@ -227,9 +224,9 @@
 									<div class="lst__activity-img">
 										<img src="images/space/event2.jpg" alt="" />
 									</div>
-									<strong class="lst__activity-title">이 의자 누가<br />디자인했어?</strong>
+									<strong class="lst__activity-title">핀란드 국민 디자이너</strong>
 									<p class="lst__activity-desc">
-										7월의 디자이너 한스 웨그너
+										8월의 디자이너 알바 알토
 									</p>
 									<p class="lst__activity-space">
 										디자인 라이브러리
@@ -285,11 +282,11 @@
 							<div class="lst__activity-event">
 								<a href="#" class="lst__activity-event-link">
 									<div class="lst__activity-img">
-										<img src="images/space/event3.jpg" alt="" />
+										<img src="images/space/event1.jpg" alt="" />
 									</div>
-									<strong class="lst__activity-title">어디에도 없던 가구와 책의 만남</strong>
+									<strong class="lst__activity-title">의자는 건축이다</strong>
 									<p class="lst__activity-desc">
-										디자인 라이브러리 X 더콘란샵
+										9월의 레어 북 컬렉션
 									</p>
 								</a>
 							</div>
@@ -298,11 +295,24 @@
 							<div class="lst__activity-event">
 								<a href="#" class="lst__activity-event-link">
 									<div class="lst__activity-img">
-										<img src="images/space/post2.jpg" alt="" />
+										<img src="images/space/event2.jpg" alt="" />
 									</div>
-									<strong class="lst__activity-title">어디에도 없는 책</strong>
+									<strong class="lst__activity-title">기다리던 빈티지 가구 전시</strong>
 									<p class="lst__activity-desc">
-										7월의 레어북 컬렉션
+										디자인 라이브러리 X 원오디너리맨션
+									</p>
+								</a>
+							</div>
+						</article>
+						<article class="lst__activity">
+							<div class="lst__activity-event">
+								<a href="#" class="lst__activity-event-link">
+									<div class="lst__activity-img">
+										<img src="images/space/event3.jpg" alt="" />
+									</div>
+									<strong class="lst__activity-title">디자인을 주도하다</strong>
+									<p class="lst__activity-desc">
+										디자인 라이브러리 9월의 새 책
 									</p>
 								</a>
 							</div>
@@ -313,22 +323,9 @@
 									<div class="lst__activity-img">
 										<img src="images/space/post1.jpg" alt="" />
 									</div>
-									<strong class="lst__activity-title">극적인 로고 타이틀의 세계</strong>
+									<strong class="lst__activity-title">우리가 알아야 할 여성 건축가</strong>
 									<p class="lst__activity-desc">
-										DIVE와 프로파간다의 인터뷰
-									</p>
-								</a>
-							</div>
-						</article>
-						<article class="lst__activity">
-							<div class="lst__activity-event">
-								<a href="#" class="lst__activity-event-link">
-									<div class="lst__activity-img">
-										<img src="images/space/event1.jpg" alt="" />
-									</div>
-									<strong class="lst__activity-title">가구예찬</strong>
-									<p class="lst__activity-desc">
-										Design Theme 01. 가구 디자인
+										9월의 디자이너 샬로트 패리앙
 									</p>
 								</a>
 							</div>
@@ -485,6 +482,7 @@
 
 	<script src="js/space.js"></script>
 	<script src="js/search.js"></script>
+	<script src="js/nav.js"></script>
 </body>
 
 </html>
