top버튼 수정, 전반적인 간격조정

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 			<p>&copy; HYUNDAI CARD Corp.</p>
 		</footer>
 
-		<a href="#header" class="btn__top"><img src="images/common/btn-top.png" alt="상단으로 이동" /></a>
+		<a href="#wrap" class="btn__top"><img src="images/common/btn-top.png" alt="상단으로 이동" /></a>
 
 		<div class="search">
 			<div class="search__top">
